adding psychic game to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,10 +44,12 @@
             <div class="row">
                 <div class="column">
                     <div class="img-container">
+                        <a  href="https://andrewja01.github.io/Psychic-Game/">
                         <img class="portfolio" src="assets/images/murray1.jpg" alt="project1"/>
                         <div class="text-block">
-                            <h4>project 1</h4> 
+                            <h4>Psychic Game</h4> 
                         </div>
+                        </a>
                     </div>
                     <div class="img-container">
                         <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
