--- a/portfolio.html
+++ b/portfolio.html
@@ -67,10 +67,12 @@
                 
                 <div class="column">
                     <div class="img-container">
+                        <a  href="https://andrewja01.github.io/unit-4-game/">
                         <img class="portfolio" src="assets/images/murray2.jpg" alt="project2"/>
                         <div class="text-block">
-                            <h4>project 2</h4>
+                            <h4>Crystal Collector</h4>
                         </div>
+                        </a>
                     </div>
                     <div class="img-container">
                         <img class="portfolio" src="assets/images/murray4.jpg" alt="project4"/>
