--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,12 @@
                         </div>
                     </div>
                     <div class="img-container">
+                        <a href-"https://andrewja01.github.io/TriviaGame/.">
                         <img class="portfolio" src="assets/images/murray5.jpg" alt="project5"/>
                         <div class="text-block">
                             <h4>project 5</h4>
                         </div>
+                        </a>
                     </div>
                 </div>
                 
