added trivia game to image

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                     <div class="img-container">
                         <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
                         <div class="text-block">
-                            <h4>project 3</h4>
+                            <h4>Triva Game</h4>
                         </div>
                     </div>
                     <div class="img-container">
