adding giftastic to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,13 +52,14 @@
                         </a>
                     </div>
                     <div class="img-container">
-                        <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
-                        <div class="text-block">
-                            <h4>Triva Game</h4>
+                        <a href="https://andrewja01.github.io/TriviaGame/.">
+                            <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
+                                <div class="text-block">
+                                <h4>Triva Game</h4>
+                                </div>
+                            </a>
                         </div>
-                    </div>
                     <div class="img-container">
-                        <a href-"https://andrewja01.github.io/TriviaGame/.">
                         <img class="portfolio" src="assets/images/murray5.jpg" alt="project5"/>
                         <div class="text-block">
                             <h4>project 5</h4>
@@ -77,10 +78,12 @@
                         </a>
                     </div>
                     <div class="img-container">
+                        <a href="https://andrewja01.github.io/GifTastic/">
                         <img class="portfolio" src="assets/images/murray4.jpg" alt="project4"/>
                         <div class="text-block">
-                            <h4>project 4</h4>
+                            <h4>GifTastic</h4>
                         </div>
+                        </a>
                     </div> 
                     <div class="img-container">
                         <img class="portfolio" src="assets/images/murray6.jpg" alt="project6"/>
