added train scheduler

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,14 +45,14 @@
                 <div class="column">
                     <div class="img-container">
                         <a  href="https://andrewja01.github.io/Psychic-Game/">
-                        <img class="portfolio" src="assets/images/murray1.jpg" alt="project1"/>
-                        <div class="text-block">
-                            <h4>Psychic Game</h4> 
-                        </div>
+                            <img class="portfolio" src="assets/images/murray1.jpg" alt="project1"/>
+                            <div class="text-block">
+                                <h4>Psychic Game</h4> 
+                            </div>
                         </a>
                     </div>
                     <div class="img-container">
-                        <a href="https://andrewja01.github.io/TriviaGame/.">
+                        <a href="https://andrewja01.github.io/TriviaGame/">
                             <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
                                 <div class="text-block">
                                 <h4>Triva Game</h4>
@@ -60,10 +60,11 @@
                             </a>
                         </div>
                     <div class="img-container">
-                        <img class="portfolio" src="assets/images/murray5.jpg" alt="project5"/>
-                        <div class="text-block">
-                            <h4>project 5</h4>
-                        </div>
+                        <a  href="https://andrewja01.github.io/Train-Scheduler/">
+                            <img class="portfolio" src="assets/images/murray5.jpg" alt="project5"/>
+                            <div class="text-block">
+                                <h4>Train Scheduler</h4>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -71,18 +72,18 @@
                 <div class="column">
                     <div class="img-container">
                         <a  href="https://andrewja01.github.io/unit-4-game/">
-                        <img class="portfolio" src="assets/images/murray2.jpg" alt="project2"/>
-                        <div class="text-block">
-                            <h4>Crystal Collector</h4>
-                        </div>
+                            <img class="portfolio" src="assets/images/murray2.jpg" alt="project2"/>
+                            <div class="text-block">
+                                <h4>Crystal Collector</h4>
+                            </div>
                         </a>
                     </div>
                     <div class="img-container">
                         <a href="https://andrewja01.github.io/GifTastic/">
-                        <img class="portfolio" src="assets/images/murray4.jpg" alt="project4"/>
-                        <div class="text-block">
-                            <h4>GifTastic</h4>
-                        </div>
+                            <img class="portfolio" src="assets/images/murray4.jpg" alt="project4"/>
+                            <div class="text-block">
+                                <h4>GifTastic</h4>
+                            </div>
                         </a>
                     </div> 
                     <div class="img-container">
