--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,16 @@
 
 <head>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
 
-  <title>Andrew Jasinski</title>
+    <title>Andrew Jasinski</title>
 
-  <!--<link rel="stylesheet" href="assets/css/reset.css">-->
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/headerstyle.css">
-  <link rel="stylesheet" href="assets/css/footerstyle.css">
-  <link rel="stylesheet" href="assets/css/imagestyle.css">
+    <!--<link rel="stylesheet" href="assets/css/reset.css">-->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/headerstyle.css">
+    <link rel="stylesheet" href="assets/css/footerstyle.css">
+    <link rel="stylesheet" href="assets/css/imagestyle.css">
 
 
 
@@ -20,59 +20,65 @@
 
 
 <body class="background">
-  
+
     <header class="topnav">
-            <div class="container">
+        <div class="container">
             <div class="brand">
                 <h1>Andrew Jasinski</h1>
             </div>
             <nav>
                 <ul>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="index.html">About</a></li>
-                </ul>    
-            </nav>  
-            </div>
-        </header>
-    
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="index.html">About</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <div class="box-container">
         <div class="box-set">
             <h2>Portfolio</h2>
-                <hr>
+            <hr>
 
             <div class="row">
                 <div class="column">
                     <div class="img-container">
-                        <a  href="https://andrewja01.github.io/Psychic-Game/">
-                            <img class="portfolio" src="assets/images/murray1.jpg" alt="project1"/>
+                        <a href="https://andrewja01.github.io/Psychic-Game/">
+                            <img class="portfolio" src="assets/images/murray1.jpg" alt="project1" />
                             <div class="text-block">
-                                <h4>Psychic Game</h4> 
+                                <h4>Psychic Game</h4>
                             </div>
                         </a>
                     </div>
                     <div class="img-container">
                         <a href="https://andrewja01.github.io/TriviaGame/">
-                            <img class="portfolio" src="assets/images/murray3.jpg" alt="project3"/>
-                                <div class="text-block">
+                            <img class="portfolio" src="assets/images/murray3.jpg" alt="project3" />
+                            <div class="text-block">
                                 <h4>Triva Game</h4>
-                                </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="img-container">
-                        <a  href="https://andrewja01.github.io/Train-Scheduler/">
-                            <img class="portfolio" src="assets/images/murray5.jpg" alt="project5"/>
+                        <a href="https://andrewja01.github.io/Train-Scheduler/">
+                            <img class="portfolio" src="assets/images/murray5.jpg" alt="project5" />
                             <div class="text-block">
                                 <h4>Train Scheduler</h4>
                             </div>
                         </a>
                     </div>
                 </div>
-                
+
                 <div class="column">
                     <div class="img-container">
-                        <a  href="https://andrewja01.github.io/unit-4-game/">
-                            <img class="portfolio" src="assets/images/murray2.jpg" alt="project2"/>
+                        <a href="https://andrewja01.github.io/unit-4-game/">
+                            <img class="portfolio" src="assets/images/murray2.jpg" alt="project2" />
                             <div class="text-block">
                                 <h4>Crystal Collector</h4>
                             </div>
@@ -80,20 +86,21 @@
                     </div>
                     <div class="img-container">
                         <a href="https://andrewja01.github.io/GifTastic/">
-                            <img class="portfolio" src="assets/images/murray4.jpg" alt="project4"/>
+                            <img class="portfolio" src="assets/images/murray4.jpg" alt="project4" />
                             <div class="text-block">
                                 <h4>GifTastic</h4>
                             </div>
                         </a>
-                    </div> 
+                    </div>
                     <div class="img-container">
-                        <img class="portfolio" src="assets/images/murray6.jpg" alt="project6"/>
-                        <div class="text-block">
-                            <h4>project 6</h4>
-                        </div>
-                    </div>                 
+                        <a href="https://andrewja01.github.io/millionDollarBaby/">
+                            <img class="portfolio" src="assets/images/murray6.jpg" alt="project6" />
+                            <div class="text-block">
+                                <h4>MillionDollarBaby</h4>
+                            </div>
+                    </div>
                 </div>
-            </div>    
+            </div>
         </div>
     </div>
 
